# AgnoMedicalAssistant

./: .gitignore  Arquiteturas Agentes Multi-Sistema Detalhadas.md  README.md  main.py  pyproject.toml  remember.txt
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: test-pipeline.yml
.hive-mind/: config.json  hive.db  hive.db-shm  hive.db-wal
.hive-mind/sessions/: hive-mind-prompt-swarm-1762878463451-pl7nu3st1.txt  session-1762878463518-2gdfcy9p9-auto-save-1762878493538.json
.swarm/: memory.db  memory.db-shm  memory.db-wal
config/: .env.example
docs/: README.md  RESEARCH_REPORT_AGNO_ECOSYSTEM.md  SETUP.md  TEST_STRATEGY.md  api-reference.md  architecture.md  deployment-guide.md  developer-guide.md
docs/analysis/: context-optimization-guide.md  integration-specification.md  workflow-architecture.md
docs/optimization/: benchmarking-strategy.md  latency-reduction-techniques.md  performance-optimization-guide.md  resource-utilization.md
docs/security/: CODE_REVIEW_GUIDELINES.md  COMPLIANCE_VALIDATION.md  RISK_MITIGATION_RECOMMENDATIONS.md  SECURITY_AUDIT_REPORT.md
examples/: basic_triage.py  rag_example.py
memory/: claude-flow@alpha-data.json
memory/agents/: README.md
memory/sessions/: README.md
src/: __init__.py
src/agents/: __init__.py  triador.py
src/api/: app.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  base_agent.py  exceptions.py
src/ocr/: __init__.py  processor.py
src/rag/: __init__.py  pipeline.py  vectorstore.py
tests/: conftest.py  pytest.ini  requirements-test.txt
tests/mocks/: __init__.py  mock_acp_server.py  mock_groq_api.py  mock_langfuse.py
tests/security/compliance/: test_hipaa_compliance.py
tests/unit/agents/: test_triador_agent.py
